Bug 1061058 - Fix more bad implicit constructors in docshell/dom/uriloader; r=smaug

--HG--
extra : rebase_source : 4dd9d4bab0b552834cd24051d7dc920950a2e8b2